<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.reecle.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.reecle.ui.our_process.ourProcessFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_ourProcess" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.reecle.ui.logout.logoutFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.reecle.ui.about_us.aboutusFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_aboutus" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.reecle.ui.contactus.contactusFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/contactus" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.reecle.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>